--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/spring_DB?createDatabaseIfNotE
 spring.datasource.username=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
+server.servlet.context-path=/produits
